# quantitative-methods-notebooks

./: .gitignore  04-Duals copy.qmd  04-Duals.ipynb  04-Duals.qmd  05-Sensitivity.qmd  06-Transportation.ipynb  DEA.ipynb  Literature.qmd  README.md  _language.yml  _quarto.yml  _variables.yml  environment-linux-64.yml  environment.yml  index.qmd  pyproject.toml  references.bib  setup.py
.github/workflows/: publish.yml
00-Assignments/: 01-Production-Distribution.ipynb  assignments.ipynb  bus_schedule.lp  cell_tower.ipynb  covid-facilities.ipynb  radiation.lp  radiation0.lp  solutions.ipynb
01-Python/: 01-01-Basics.ipynb  01-02-Basics-Ex.ipynb  01-03-Numpy.ipynb  01-04-Pandas.ipynb  01-05-Pandas-Ex.ipynb  index.qmd
02-Introduction/: index.ipynb
02-Introduction copy/: SimplexLL.ipynb  index.html  index.ipynb
03-Graphical-Method/: 01-Blending.ipynb  02-Sensitivity.ipynb
03-Graphical-Method copy/: 01-Blending.ipynb  02-Sensitivity.ipynb
04-Simplex/: 00-Modelling.ipynb  01-Simplex-Method copy.ipynb  01-Simplex-Method.ipynb  02-Simplex-Method-3D.ipynb  03-Simplex-Method-Edge.ipynb
printouts/: simplex-tables.tex
scripts/: coffee_blending.py
