[project]
name = "opt2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.21",
    "gurobipy>=13.0.1",
    "ipython>=9.10.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "pillow>=12.1.1",
    "plotly>=6.5.2",
    "polytope>=0.2.5",
    "qrcode>=8.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
